<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_label" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_label" />

    <TextView
        android:id="@+id/textView_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_showAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_label" />

    <Button
        android:id="@+id/button_show_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_search_label" />

    <Button
        android:id="@+id/button_database_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_delete" />

    <Button
        android:id="@+id/button1_database_delete_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_delete_confirm" />

    <Button
        android:id="@+id/button_add_all_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_all_books_label" />

</LinearLayout>